# labs_2s

./: .coverage  .gitignore  README.md  app.py  pyproject.toml  test_app.py
.github/workflows/: actions.yml  first.yml  python-app.yml  python1-app.yml  second.yml
1_lab/: .env  README.md  env_test.py  main.py  rich_test.py
1_mm_lab/: 1.ipynb  README.md
2_lab/: 2.py  3.py  README.md
2_mm_lab/: 1.ipynb  README.md
3_lab/: README.md
exam/: main.py  test.py
myproject/: main.py  pyproject.toml
